--- a/package.json
+++ b/package.json
@@ -1,12 +1,19 @@
 {
-  "name": "4rum",
-  "version": "0.1.0",
-  "description": "Node app that allows users to upload, list and download files",
-  "main": "index.js",
+  "name": "backend-solo",
+  "version": "1.0.0",
+  "description": "",
+  "main": "src/server.js",
+  "scripts": {
+    "start": "node src/server.js",
+    "watch": "nodemon script.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "sandman",
+  "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "mongoose": "^7.4.1",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.0.1",
+    "uuid": "^9.0.0"
   }
 }
