--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "deep-email-validator": "^0.1.21",
     "express": "^4.18.2",
     "mongoose": "^7.4.2"
   },
