--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "deep-email-validator": "^0.1.21",
     "express": "^4.18.2",
-    "mongoose": "^7.4.2"
+    "mongoose": "^7.4.2",
+    "nodemailer": "^6.9.4",
+    "otp-generator": "^4.0.1"
   },
   "devDependencies": {
     "dotenv": "^16.3.1",
