--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "sandman",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "mongoose": "^7.4.3",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1",
     "uuid": "^9.0.0"
